spacing issue fixed

--- a/client/src/pages/Single/Single.scss
+++ b/client/src/pages/Single/Single.scss
@@ -54,7 +54,8 @@
 
     p {
       text-align: justify;
-      line-height: 30px;
+      line-height: 20px;
+      margin: 0px;
     }
   }
 }
